--- a/index.html
+++ b/index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <title>To Do List</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>To Do List</h1>
-    <div style="margin:20px">
-        <input placeholder="Enter a task" class="form-control-lg" type="text" id="newToDoItem">
-        <button style="font-size:x-small;" class="btn-lg btn-success btn btn-primary" type="submit" id="submitButton">Press to submit</button>
+    <div style="margin: 20px">
+      <input
+        placeholder="Enter a task"
+        class="form-control-lg"
+        type="text"
+        id="newToDoItem"
+      />
+      <button
+        style="font-size: x-small"
+        class="btn-lg btn-success btn btn-primary"
+        type="submit"
+        id="submitButton"
+      >
+        Press to submit
+      </button>
+      <select id="priorityList" name="priorityList">
+        <option value="High">High</option>
+        <option value="Medium">Medium</option>
+        <option value="Low" selected>Low</option>
+      </select>
+      <!-- <input type="date">Enter Due Date</input> -->
     </div>
     <div id="encase">
-        <div id="listOfToDoItems">
+      <div id="listOfToDoItems"></div>
     </div>
-</div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
