fixed bugs with the due date and made priority dynamically changeable

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <label for="filterTasksByCategories">enter categories to filter by:</label>
         <input id="filterTasksByCategories" name="filterTasksByCategories"></input>
         </select>
+        <button id="pendingOnly">Show pending only</button>
+        <button id="displayAllTasks">Show all tasks</button>
+        <button id="displayMissedTasks">Show missed tasks</button>
       </div>
       <div id="listOfToDoItems"></div>
     </div>
