some more changes

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       >
         Press to submit
       </button>
+      <!-- <button id="clearAll">erase everything</button> -->
     </div>
     <div id="encase">
       <div>
@@ -46,11 +47,9 @@
           <option value="Due Date">Due Date</option>
         </select>
         <label for="startDateTime">enter start date:</label>
-        <input type="date" id="startDateTime"></input>
+        <input type="datetime-local" id="startDateTime"></input>
         <label for="endDateTime">enter end date:</label>
-        <input type="date" id="endDateTime"></input>
-        <label for="filterTasksByTags">enter tag(s) to filter by:</label>
-        <input id="filterTasksByTags" name="filterTasksByTags"></input>
+        <input type="datetime-local" id="endDateTime"></input>
         <label for="filterTasksByCategories">enter categories to filter by:</label>
         <input id="filterTasksByCategories" name="filterTasksByCategories"></input>
         </select>
