added filtering by priority

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
       >
         Press to submit
       </button>
+      <div>
+        <button id="filterHighPriority">High Priority</button>
+        <button id="filterMediumPriority">Medium Priority</button>
+        <button id="filterLowPriority">Low Priority</button>
+        <button id="showAllTasksButton">Show All Tasks</button>
+      </div>
+      
       <!-- <button id="clearAll">erase everything</button> -->
     </div>
     <div id="encase">
