integrated filtering using tags and categories

--- a/index.html
+++ b/index.html
@@ -57,13 +57,22 @@
                 <input type="datetime-local" id="startDateTime" />
                 <label for="endDateTime">enter end date:</label>
                 <input type="datetime-local" id="endDateTime" />
-                <!-- <label for="filterTasksByCategories"
+                <label for="filterTasksByCategories"
                     >enter categories to filter by:</label
                 >
                 <input
                     id="filterTasksByCategories"
                     name="filterTasksByCategories"
-                /> -->
+                />
+                <label for="filterTasksByTags"
+                    >enter tags to filter by:</label
+                >
+                <input
+                    id="filterTasksByTags"
+                    name="filterTasksByTags"
+                />
+                <button id="resetCategories">Reset Categories</button>
+                <button id="resetTags">Reset Tags</button>
                 <button id="pendingOnly">Show pending only</button>
                 <button id="displayAllTasks">Show all tasks</button>
                 <button id="displayMissedTasks">Show missed tasks</button>
