--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
         <title>To Do List</title>
     </head>
     <body>
+        <div id="reminderPalette" style="display: none">
+            <div id="reminderOverlay"></div>
+            <div id="reminderContent">
+                <label for="reminderText">Reminder Text:</label>
+                <input type="text" id="reminderText" />
+                <label for="reminderDate">Reminder Date:</label>
+                <input type="datetime-local" id="reminderDate" />
+                <button id="saveReminderButton">Save Reminder</button>
+                <button id="cancelReminderButton">Cancel</button>
+            </div>
+        </div>
         <div id="amenities">
-            <!-- <div class="amenity">
-                <h1>Reminders</h1>
-                <input type="text" id="taskInput" placeholder="Enter task" />
-                <input type="datetime-local" id="reminderTime" />
-                <button onclick="setReminder()">Set Reminder</button>
-            </div> -->
+            <button id="createReminderButton">Create Reminder</button>
             <div class="amenity">
                 <h1>To Do List</h1>
                 <div style="margin: 20px">
