some more styling

--- a/index.html
+++ b/index.html
@@ -44,14 +44,7 @@
                         </select>
                         <label for="dueDate">set due date:</label>
                         <input type="datetime-local" id="dueDate" />
-                        <button
-                            style="font-size: x-small"
-                            class="btn-lg btn-success btn btn-primary"
-                            type="submit"
-                            id="submitButton"
-                        >
-                            Press to submit
-                        </button>
+                        <button type="submit" id="submitButton">Press to submit</button>
                         <button id="cancelToDoButton">Cancel</button>
                     </div>
                 </div>
