mode css and logs for subtasks

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <button id="resetCategories">Reset Categories</button>
                 <button id="resetTags">Reset Tags</button>
                 <button id="pendingOnly">Show pending only</button>
-                <button id="displayAllTasks">Show all tasks</button>
+                <button id="displayAllTasks">Reset All Filters</button>
                 <button id="displayMissedTasks">Show missed tasks</button>
             </div>
             <div id="listOfToDoItems"></div>
@@ -109,7 +109,7 @@
                     id="subtaskInput"
                     placeholder="Enter a subtask"
                 />
-                <button id="addSubtaskButton">Add Subtask</button>
+                <button id="addSubtaskButton2">Add Subtask</button>
             </div>
         </div>
         <script src="https://unpkg.com/compromise"></script>
