fixed some bugs

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                             type="text"
                             id="newToDoItem"
                         />
-                        <label for="priorityList">set priority:</label>
+                        <label for="priorityList">Set Priority:</label>
                         <select id="priorityList" name="priorityList">
                             <option value="High">High</option>
                             <option value="Medium">Medium</option>
                             <option value="Low" selected>Low</option>
                         </select>
-                        <label for="dueDate">set due date:</label>
+                        <label for="dueDate">Set Due Date:</label>
                         <input type="datetime-local" id="dueDate" />
                         <button type="submit" id="submitButton">Press to submit</button>
                         <button id="cancelToDoButton">Cancel</button>
